test-project-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_bug_752.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_bug_752"
---
//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<57 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([one/1]).

-type one(I) :: {one, I}.




//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<84 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([two/1]).

-type two(K) :: {two, one:one(integer())} | {gleam_phantom, K}.




//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.


//// /out/lib/the_package/include/two_Two.hrl
-record(two, {thing :: one:one(integer())}).
