test-project-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_import_shadowing_prelude.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 85
expression: "./cases/erlang_import_shadowing_prelude"
---
//// /out/lib/the_package/_gleam_artefacts/one.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one.cache_meta
<61 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one.erl
-module(one).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([error/0]).

-type error() :: error.




//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<88 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.erl
-module(two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export([main/0]).

-file("src/two.gleam", 4).
-spec main() -> one:error().
main() ->
    error.


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one,
               two]},
    {registered, []}
]}.
