test-project-compiler/src/snapshots/test_package_compiler__generated_tests__erlang_nested_qualified_constant.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/erlang_nested_qualified_constant"
---
//// /out/lib/the_package/_gleam_artefacts/one@two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.cache_meta
<57 byte binary>

//// /out/lib/the_package/_gleam_artefacts/one@two.erl
-module(one@two).
-compile([no_auto_import, nowarn_unused_vars, nowarn_unused_function, nowarn_nomatch]).

-export_type([a/0]).

-type a() :: a.




//// /out/lib/the_package/_gleam_artefacts/two.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/two.cache_meta
<100 byte binary>

//// /out/lib/the_package/_gleam_artefacts/two.erl
-module(two).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [one@two,
               two]},
    {registered, []}
]}.
