test-project-compiler/src/snapshots/test_package_compiler__generated_tests__javascript_d_ts.snap
---
source: test-package-compiler/src/generated_tests.rs
expression: "./cases/javascript_d_ts"
---
//// /out/lib/the_package/_gleam_artefacts/hello.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/hello.cache_meta
<73 byte binary>

//// /out/lib/the_package/gleam.d.mts
export * from "../prelude.mjs";
export type * from "../prelude.d.mts";


//// /out/lib/the_package/gleam.mjs
export * from "../prelude.mjs";


//// /out/lib/the_package/hello.d.mts
import type * as _ from "./gleam.d.mts";

export class Woo extends _.CustomType {}

export type Wibble$ = Woo;

export function wobble(): Wibble$;


//// /out/lib/the_package/hello.mjs
/// <reference types="./hello.d.mts" />
import { CustomType as $CustomType } from "./gleam.mjs";

export class Woo extends $CustomType {}

export function wobble() {
  return new Woo();
}
