test-project-compiler/src/snapshots/test_package_compiler__generated_tests__not_overwriting_erlang_module.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 237
expression: "./cases/not_overwriting_erlang_module"
---
//// /out/lib/the_package/_gleam_artefacts/app@code.cache
<.cache binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.cache_meta
<65 byte binary>

//// /out/lib/the_package/_gleam_artefacts/app@code.erl
-module(app@code).


//// /out/lib/the_package/ebin/importy.app
{application, importy, [
    {vsn, "0.1.0"},
    {applications, []},
    {description, ""},
    {modules, [app@code]},
    {registered, []}
]}.
