test-project-compiler/src/snapshots/test_package_compiler__generated_tests__src_importing_test.snap
---
source: test-package-compiler/src/generated_tests.rs
assertion_line: 273
expression: "./cases/src_importing_test"
---
error: App importing test module
  ┌─ src/one.gleam:3:1
  │
3 │ import two
  │ ^ Imported here

The application module `one` is importing the test module `two`.

Test modules are not included in production builds so test modules cannot
import them. Perhaps move the `two` module to the src directory.

